--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -28,7 +28,7 @@
         <div id="signup_input_inside">
             <img src="../../assets/image/signup_login/password_icon.svg">
             <ion-item>
-            <ion-input formControlName="passwd" type="text" placeholder="Password" [(ngModel)]="this.user_profileService.userProfile.passwd"></ion-input>
+            <ion-input formControlName="password" type="text" placeholder="Password" [(ngModel)]="this.user_profileService.userProfile.password"></ion-input>
             </ion-item>
         </div>
     </div>
