fix login bcrypt problem

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
             <div id="login_input_inside">
                 <img src="../../assets/image/signup_login/password_icon.svg">
                 <ion-item>
-                <ion-input type="current-password" formControlName="password" placeholder="Password"></ion-input>
+                <ion-input type="password" formControlName="password" placeholder="Password"></ion-input>
                 </ion-item>
             </div>
         </div>
