--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
             <div class="forgot_password_button_inside" [routerLink]="['/verifyemail']" >Forgot Password?</div>
         </div>
         <div class="firstpage_button">
-            <ion-button type="submit" class="firstpage_button1" [routerLink]="['/dashboard']" >LOGIN</ion-button>
+            <ion-button type="submit" class="firstpage_button1" [routerLink]="['/login']" >LOGIN</ion-button>
         </div>
         <div class="or_word">
             <hr width="25%">
