Implement frontend and backend to show audiences and colaries.

--- a/src/app/dashboard-live-workout/dashboard-live-workout.component.html
+++ b/src/app/dashboard-live-workout/dashboard-live-workout.component.html
@@ -15,9 +15,8 @@
       <br>
       <br>
       <div class="adio">
-        <!-- 视频 -->
-        <video src="../../assets/{{tutorial.videoUrl}}" width= 100%; height=100%; autoplay="autoplay"></video>
-
+        <!-- 视频预览 -->
+        <img src="../../assets/{{tutorial.bigImageUrl}}" (click)="goToExerciseLivePage()" width=100%; height=100%;>
       </div>
       <!-- <br> -->
 
