get current user function & log-out

--- a/src/app/my/my.component.html
+++ b/src/app/my/my.component.html
@@ -49,11 +49,17 @@
       </div>
     </div>
   </div>
+  
 
   <div class="suggestions">
     <p class="title">Meal suggestions</p>
     <app-suggestions></app-suggestions>
   </div>
+
+  <ion-button style="margin-bottom: 100px;" (click)="logOut()">
+    log out
+  </ion-button>
+
   <app-navbar></app-navbar>
 
 </ion-content>
