--- a/src/app/my/my.component.html
+++ b/src/app/my/my.component.html
@@ -56,7 +56,7 @@
     <app-suggestions></app-suggestions>
   </div>
 
-  <ion-button style="margin-bottom: 100px;" (click)="logOut()">
+  <ion-button id="logout_button" (click)="logOut()">
     log out
   </ion-button>
 
