--- a/src/app/calculate/calculate.component.html
+++ b/src/app/calculate/calculate.component.html
@@ -12,16 +12,16 @@
 
 
       <div class="elements">
-        <div class="title2">Workout Time</div>
+        <div class="title2">Food name</div>
         <ion-item lines="none" class="form-time">
-          <ion-input class="inputClass" type="number" placeholder="minutes" required></ion-input>
+          <ion-input class="inputClass" type="text" placeholder=" ex: apple" required></ion-input>
         </ion-item>
       </div>
 
       <div class="elements">
-        <div class="title2">Calorie Consumption</div>
+        <div class="title2">Intake(g)</div>
         <ion-item lines="none" class="form-cal">
-          <ion-input class="inputClass" type="number" placeholder="kcal" required></ion-input>
+          <ion-input class="inputClass" type="number" placeholder=" ex: 500" required></ion-input>
         </ion-item>
       </div>
 
