login and signup button decorate

--- a/src/app/signup2/signup2.component.scss
+++ b/src/app/signup2/signup2.component.scss
@@ -109,9 +109,15 @@
   }
  
   .genderbtn{
-    height: 10em;
-    width: 10em;
+    height: 7em;
+    width: 7em;
     padding: none;
     margin: none;
     --background:none;
+  }
+
+  ion-button {
+    --background-activated: #F19D6E;
+    --background-hover: none;
+    --background-focused: #F19D6E;
   }
