--- a/src/app/dashboard-live-workout/dashboard-live-workout.component.html
+++ b/src/app/dashboard-live-workout/dashboard-live-workout.component.html
@@ -16,7 +16,11 @@
       <br>
       <div class="adio">
         <!-- 视频预览 -->
-        <img src="../../assets/{{tutorial.bigImageUrl}}" (click)="goToExerciseLivePage()" width=100%; height=100%;>
+        <img src="../../assets/{{tutorial.bigImageUrl}}" width=100%; height=100%;>
+      </div>
+      <div class="play_button">
+        <img src="../../assets/image/element/play_button.svg.png" width=25%; height=30%;
+             (click)="goToExerciseLivePage()">
       </div>
       <!-- <br> -->
 
