Add videos and preview images.

--- a/src/app/dashboard-live-workout/dashboard-live-workout.component.html
+++ b/src/app/dashboard-live-workout/dashboard-live-workout.component.html
@@ -19,7 +19,7 @@
         <img src="../../assets/{{tutorial.bigImageUrl}}" width=100%; height=100%;>
       </div>
       <div class="play_button">
-        <img src="../../assets/image/element/play_button.svg.png" width=25%; height=30%;
+        <img src="../../assets/image/element/play_button.png"
              (click)="goToExerciseLivePage()">
       </div>
       <!-- <br> -->
