--- a/src/app/dashboard-live-workout/dashboard-live-workout.component.scss
+++ b/src/app/dashboard-live-workout/dashboard-live-workout.component.scss
@@ -46,8 +46,10 @@ ul > li {
 .play_button {
   position: absolute;
   z-index: 2;
-  left: 45%;
-  top: 38%;
+  left: 40%;
+  top: 35%;
+  width: 20%;
+  height: 10%
 }
 
 .adio {
