--- a/src/app/dashboard-exercise-finished/dashboard-exercise-finished.component.html
+++ b/src/app/dashboard-exercise-finished/dashboard-exercise-finished.component.html
@@ -1,34 +1,34 @@
 <ion-content>
   <app-bg-interfaces></app-bg-interfaces>
-<div class="title">
-  <!-- <div class="tittle"> -->
+  <div class="title">
+    <!-- <div class="tittle"> -->
     <br>
     <br>
     <b><span class="p">BURN IT UP</span></b>
-  <!-- </div> -->
+    <!-- </div> -->
     <br>
     <br>
-  <div class="body">
+    <div class="body">
       <div class="h_title">
-        <b><span >CONGRAT</span></b>
+        <b><span>CONGRAT</span></b>
       </div>
       <div class="pic">
         <img src="../../assets/image/dashboard/undraw_celebrating_rtuv 1.svg" alt="" class="img_pic">
       </div>
       <div class="f_title">
-        <b><span >You Have finished the exercise</span></b>
+        <b><span>You Have finished the exercise</span></b>
       </div>
       <div class="a_title">
-        <b><span >450 Calories burns</span></b>
+        <b><span>{{calories}} Calories burns</span></b>
         <br>
-        <b><span >Active minute + 12mins</span></b>
+        <b><span>Active minute + {{time}}mins</span></b>
       </div>
       <div class="a_btn">
         <br>
-        <ion-button expand="block" class="b_btn" color="secondary" >Block Button</ion-button>
-        
+        <ion-button expand="block" class="b_btn" color="secondary">Block Button</ion-button>
+
       </div>
+    </div>
   </div>
-</div>
-<app-navbar></app-navbar>
+  <app-navbar></app-navbar>
 </ion-content>
