--- a/src/app/exercise-live-video/exercise-live-video.component.scss
+++ b/src/app/exercise-live-video/exercise-live-video.component.scss
@@ -1,3 +1,21 @@
+.btn {
+    width: 90%;
+    height: 50px;
+    /* background-color: blue; */
+    margin-top: 20px;
+    margin-left: 20px;
+    /* border-radius: 20px; */
+}
+.btnn {
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    background-color: orange;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    /* 字体颜色color  背景颜色background  */
+}
 .video{
     width: 90%;
     height: 200px;
