Use iframe to play youtube video, and add some preview images.

--- a/src/app/dashboard-live-workout/dashboard-live-workout.component.scss
+++ b/src/app/dashboard-live-workout/dashboard-live-workout.component.scss
@@ -47,9 +47,9 @@ ul > li {
   position: absolute;
   z-index: 2;
   left: 40%;
-  top: 35%;
+  top: 40%;
   width: 20%;
-  height: 10%
+  height: 10%;
 }
 
 .adio {
