delete navbar of subpages

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -71,7 +71,7 @@
     </div>
 
     <div id="nav5" class="nav-button" (click)="navClick(5)" [routerLink]="['/my']">
-        <img *ngIf="!arr_boolNav[5]" src="../../assets/image/navbar/nav5-1.png" style="width:49px; height:48px;"  >
+        <img *ngIf="!arr_boolNav[5]" src="../../assets/image/navbar/nav5.svg" style="width:49px; height:48px;"  >
         <svg *ngIf="arr_boolNav[5]" width="49" height="48" viewBox="0 0 49 48" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <mask id="mask0_93_204" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="1" width="45"
