--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="firstpage_button">
-    <div class="firstpage_button1" [routerLink]="['/my']">NEXT</div>
+    <div class="firstpage_button1" [routerLink]="['/my']">DONE</div>
   </div>
 
 </ion-content>
