--- a/src/app/calculate/calculate.component.html
+++ b/src/app/calculate/calculate.component.html
@@ -4,7 +4,7 @@
 
   <div class="container">
     <div class="title">Your daily intake</div>
-    <div class="kcal">1000 kcal</div>
+    <div class="kcal">{{kcalTop}} kcal</div>
 
     <div class="title">Caluculate your calorie intake!</div>
 
@@ -26,7 +26,7 @@
       </div>
 
       <div class="elements">
-        <input type="submit" value="confirm" id="confirm-button" (click)="presentAlert()">
+        <input type="submit" value="confirm" id="confirm-button" (click)="sendApiRequest()">
         <div class="popup" id="popup">
           <div class="info"> Your calories intake is 265 kcal</div>
           <button type="button" (click)="closePopup()">Back</button>
