--- a/src/app/my/my.component.html
+++ b/src/app/my/my.component.html
@@ -5,24 +5,24 @@
   </div>
 
   <div class="avatar-container">
-    <img src="assets/image/element/avatar.svg" alt="avatar" class="avatar">
-    <div class="user-id">User id</div>
+    <img src="{{userProfile.avatar}}" alt="avatar" class="avatar">
+    <div class="user-id">{{userProfile.uname}}</div>
   </div>
 
   <div class="records">
     <div class="total-hours">
-      <div class="info">Total Hours</div>
-      <div id="hours"> 10</div>
+      <div class="info">Calories Burned</div>
+      <div class="hours"> {{userProfile.calories}}</div>
     </div>
 
     <div class="workout-days">
-      <div class="info">Workout days</div>
-      <div id="days"> 20</div>
+      <div class="info">My Weight Goal</div>
+      <div class="days"> {{userProfile.goal}}</div>
     </div>
 
     <div class="total-points">
-      <div class="info">Total Points</div>
-      <div id="points"> 1000</div>
+      <div class="info">Current Weight</div>
+      <div class="points"> {{userProfile.weight}}</div>
     </div>
   </div>
 
