--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -5,8 +5,8 @@
 }
 
 .imgx {
-
-    width: 100%;
+    margin-left: 20px;
+    width: 90%;
     height: 100%;
     border-radius: 20px;
 }
@@ -142,7 +142,7 @@
 }
 
 .iipt {
-    margin-top: 20px;
+    margin-top: 40px;
     width: 90%;
     height: 50%;
     border-radius: 40px;
