--- a/src/app/dashboard-exercise-finished/dashboard-exercise-finished.component.html
+++ b/src/app/dashboard-exercise-finished/dashboard-exercise-finished.component.html
@@ -25,7 +25,7 @@
       </div>
       <div class="a_btn">
         <br>
-        <ion-button expand="block" class="b_btn" color="secondary">Block Button</ion-button>
+        <ion-button expand="block" class="b_btn" color="secondary" [routerLink]="['/dashboard']">Done</ion-button>
 
       </div>
     </div>
